<resources>
    <string name="app_name">Learning Patrones</string>
    <string name="m_title">Menú</string>
    <string name="close">Cerrar</string>
    <string name="open">Inicio</string>
    <string name="back"><![CDATA[>]]></string>
    <string name="ba"><![CDATA[<<]]></string>
    <string name="mp">Music Player</string>
    <string name="tu">Learnig Tutorial</string>
    <string name="fast"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="caliuno">Lo siento, no has pasado satisfactoriamente el cuestionario</string>
    <string name="califdos">Tal vez deberias de probar hacer de nuevo el examen</string>
    <string name="califtres">Eres asombroso has pasado correctamente todo el cuestionario</string>
    <string name="lecuno">Introducción</string>
    <string name="leccunoin">In</string>
    <string name="lecccinco">Patrones de comportamiento</string>
    <string name="incinco">PC</string>
    <string name="lecccuatro">Patrones estructurales</string>
    <string name="incuatro">PE</string>
    <string name="leccdos">Un caso de estudio: diseñando un editor de documentos</string>
    <string name="indos">ED</string>
    <string name="lecctres">Patrones de creación</string>
    <string name="intres">PC</string>
    <string name="de">Desarrollador seleccionado</string>
    <string name="cont">Contenido Seleccionado</string>
    <string name="vid">Video seleccionado</string>
    <string name="soni">Sonido seleccionado</string>
    <string name="test">Quiz seleccionado</string>
    <string name="conf">Configurar</string>
    <string name="login">Login seleccionado</string>
    <string name="reg">Registrar Seleccionado</string>
    <string name="res">Resultado seleccionado</string>
    <string name="prac">Practica seleccionado</string>
    <string name="ind">Indice seleccionado</string>
    <string name="desa">Desarrolladores seleccionado</string>
    <string name="jueg">Juego seleccionado</string>
    <string name="cerr">App... Cerrando</string>
    <string name="desarr">Desarrollador</string>
    <string name="nombre">Josè Alfredo Núñez Contreras</string>
    <string name="correo">Correo</string>
    <string name="corr">josealfredocontreras92@gmail.com</string>
    <string name="log">Logut</string>
    <string name="me">Menu</string>
    <string name="era">Borrar Avance</string>
    <string name="pass">Password</string>
    <string name="us">Username</string>
    <string name="lo">Login</string>
    <string name="register">Register</string>
    <string name="logi">Login</string>
    <string name="titulo">Titulo</string>
    <string name="check">Verificar respuesta</string>
    <string name="cod">Siguiente código</string>
    <string name="omp">Para comenzar oprima el boton Siguiente código</string>
    <string name="user">Username</string>
    <string name="passw">Password</string>
    <string name="re">Registro</string>
    <string name="regi">Register</string>
    <string name="cinco">PS</string>


    <string-array name="type">
        <item>New Game</item>
        <item>4 X 4</item>
        <item>4 X 5</item>
        <item>4 X 6</item>
        <item>5 X 6</item>
        <item>6 X 6</item>
    </string-array>

    <string-array name="Lista">
        <item>"Bienvenido a Learning Patrones"</item>
        <item>"Muestre su capacidad de aprendizaje con esta aplicación"</item>
        <item>"Introducción"</item>
        <item>"Un caso de estudio: diseñando un editor de documentos"</item>
        <item>"Patrones de creación"</item>
        <item>"Patrones estructurales"</item>
        <item>"Patrones de comportamiento"</item>
    </string-array>

    <string-array name="Desarro">
        <item>""</item>
        <item>"Muestre su capacidad de aprendizaje con esta aplicación"</item>
        <item>"Ficheros an android memoria externa"</item>
        <item>"Ficheros en android memoria interna"</item>
        <item>"Graficos con base de datos"</item>
        <item>"Guaradar textos escritos en una red"</item>

    </string-array>

    <string-array name="Grafico">
        <item>""</item>
        <item>"Grafico"</item>
        <item>"Correo"</item>
    </string-array>

    <string-array name="Practica">
        <item>""</item>
        <item>"Introducción"</item>
        <item>"Un caso de estudio: diseñando un editor de documentos"</item>
        <item>"Patrones de creación"</item>
        <item>"Patrones estructurales"</item>
        <item>"Patrones de comportamiento"</item>

    </string-array>

    <string-array name="Video">
        <item>""</item>
        <item>"Introducción"</item>
        <item> "Singleton"</item>
        <item>"Fabrica"</item>
        <item>"Frabrica y fabrica abstrata"</item>
        <item>"Builder"</item>
        <item> "Prototipo"</item>
        ç
        <item>"Adaptador"</item>

    </string-array>
    <string name="title_activity_preferencia">Preferencias</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Recomendaciones en redes sociales</string>
    <string name="pref_description_social_recommendations">Recomendacion a personas de contactos basados en el historial de mensajes
    </string>

    <string name="pref_title_display_name">Muestra tu nombre</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Añadir amigos de mensajes</string>
    <string-array name="pref_example_list_titles">
        <item>Siempre</item>
        <item>Cuando es posible</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">Mensaje de notiifcaciones</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrar</string>
    <string name="title_activity_settings">Settings</string>


</resources>
