<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/desarrolladores_fragment"
    >
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       >

        <TextView
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/desarr"
            android:textSize="50px" />

        <TextView
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/nombre"
            android:textSize="50px" />
        <TextView
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/correo"
            android:textSize="50px" />
        <TextView
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/corr"
            android:textSize="50px"
            android:autoLink="all"
            android:linksClickable="true" />

    </GridLayout>
</RelativeLayout>