<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/QuestionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <EditText
        android:id="@+id/AnswerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/AnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check" />

    <TextView
        android:id="@+id/AnswerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/QuestionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cod" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/omp" />

</LinearLayout>